src/test/ui/parser/issue-62546.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-62546.rs:3:52
   |
LL | pub t(#
   |      - unclosed delimiter
LL |
LL |
   |                                                    ^

error: aborting due to previous error

